--- a/frontend/src/main/ngx/package.json
+++ b/frontend/src/main/ngx/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "basicproject-frontend",
+  "name": "bankmanager-web",
   "version": "4.0.1",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4299",
+    "start": "ng serve --port 4200 -o --host localhost",
     "production": "ng build --aot=false --target -prod -href /app/",
     "production-aot": "ontimize-web-ngx production-aot --project-name basicproject-frontend --href /app/"
   },
