--- a/model/src/main/db/templateDB.properties
+++ b/model/src/main/db/templateDB.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.4
-#Fri Jun 05 15:50:46 CEST 2020
-version=2.3.4
-modified=yes
+#Tue Jun 16 12:44:32 CEST 2020
 tx_timestamp=0
+modified=no
+version=2.3.4
